clang/test/BSC/Negative/SafeZone/safe_zone_fun_call/safe_zone_fun_call.cbs

// RUN: %clang_cc1 -fsyntax-only -verify %s

_Unsafe int add(int x, int y) {
  return x + y;
}

_Safe int sub(int m, int n) {
  return m - n;
}
_Unsafe int (*p)(int, int) = add;
_Safe int (*q)(int , int) = sub;

_Safe int main(void) {
  int a = 1;
  int b = 2;
  int c = add(a, b);  // expected-error {{_Unsafe function call is forbidden in the safe zone}}
  int d = sub(a, b); 
  int g = p(a, b);    // expected-error {{_Unsafe function call is forbidden in the safe zone}}
  int h = q(a, b);
  _Safe {
    int e = add(a, b);  // expected-error {{_Unsafe function call is forbidden in the safe zone}}
    int f = sub(a, b);
    int g = p(a, b);    // expected-error {{_Unsafe function call is forbidden in the safe zone}}
    int h = q(a, b);
  };
  _Unsafe {
    int e = add(a, b);
    int f = sub(a, b);
    int g = p(a, b);
    int h = q(a, b);
  }
  return 0;
}